Adicionado Swagger e metodos da tabela Planos
